--- a/parts/doctreeview/doctreeglobalconfigwidgetbase.ui
+++ b/parts/doctreeview/doctreeglobalconfigwidgetbase.ui
@@ -555,38 +555,6 @@
                 <attribute name="title">
                     <string>External Documentation</string>
                 </attribute>
-                <widget class="KListView">
-                    <property name="name">
-                        <cstring>extListView</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>11</x>
-                            <y>11</y>
-                            <width>475</width>
-                            <height>407</height>
-                        </rect>
-                    </property>
-                    <property name="focusPolicy">
-                        <enum>WheelFocus</enum>
-                    </property>
-                </widget>
-                <widget class="QPushButton">
-                    <property name="name">
-                        <cstring>extEditButton</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>490</x>
-                            <y>40</y>
-                            <width>80</width>
-                            <height>23</height>
-                        </rect>
-                    </property>
-                    <property name="text">
-                        <string>Edit</string>
-                    </property>
-                </widget>
                 <widget class="QPushButton">
                     <property name="name">
                         <cstring>extEnableButton</cstring>
@@ -625,22 +593,6 @@
                         <string>Disable</string>
                     </property>
                 </widget>
-                <widget class="QPushButton">
-                    <property name="name">
-                        <cstring>extAddButton</cstring>
-                    </property>
-                    <property name="geometry">
-                        <rect>
-                            <x>490</x>
-                            <y>10</y>
-                            <width>80</width>
-                            <height>23</height>
-                        </rect>
-                    </property>
-                    <property name="text">
-                        <string>Add</string>
-                    </property>
-                </widget>
                 <spacer>
                     <property name="name">
                         <cstring>spacer8</cstring>
@@ -666,6 +618,54 @@
                         </rect>
                     </property>
                 </spacer>
+                <widget class="KListView">
+                    <property name="name">
+                        <cstring>extListView</cstring>
+                    </property>
+                    <property name="geometry">
+                        <rect>
+                            <x>11</x>
+                            <y>11</y>
+                            <width>470</width>
+                            <height>407</height>
+                        </rect>
+                    </property>
+                    <property name="focusPolicy">
+                        <enum>WheelFocus</enum>
+                    </property>
+                </widget>
+                <widget class="QPushButton">
+                    <property name="name">
+                        <cstring>extEditButton</cstring>
+                    </property>
+                    <property name="geometry">
+                        <rect>
+                            <x>490</x>
+                            <y>40</y>
+                            <width>80</width>
+                            <height>23</height>
+                        </rect>
+                    </property>
+                    <property name="text">
+                        <string>Edit</string>
+                    </property>
+                </widget>
+                <widget class="QPushButton">
+                    <property name="name">
+                        <cstring>extAddButton</cstring>
+                    </property>
+                    <property name="geometry">
+                        <rect>
+                            <x>490</x>
+                            <y>10</y>
+                            <width>80</width>
+                            <height>23</height>
+                        </rect>
+                    </property>
+                    <property name="text">
+                        <string>Add</string>
+                    </property>
+                </widget>
             </widget>
         </widget>
     </grid>
@@ -807,6 +807,12 @@
         <receiver>doctreeview_global_config_widget</receiver>
         <slot>pushEdit_clicked()</slot>
     </connection>
+    <connection>
+        <sender>extAddButton</sender>
+        <signal>clicked()</signal>
+        <receiver>doctreeview_global_config_widget</receiver>
+        <slot>extAddButton_clicked()</slot>
+    </connection>
 </connections>
 <tabstops>
     <tabstop>qtdocs_view</tabstop>
@@ -856,6 +862,7 @@
     <slot>doxygenedit_button_clicked()</slot>
     <slot>kdocedit_button_clicked()</slot>
     <slot>pushEdit_clicked()</slot>
+    <slot>extAddButton_clicked()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
